# closure2wbs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: closures_wbs.puml
examples/mermaid/: input.json  output.mmd
examples/plantuml/: input.json
src/: main.rs
tests/: integration_tests.rs
tests/fixtures/: invalid.json
