[package]
name = "closure2wbs"
version = "0.3.0"
description = "A cli tool to convert closure tables to a WBS representation."
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/stefafafan/closure2wbs"
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
